[tool.poetry]
name = "webping"
version = "0.1.0"
description = ""
authors = ["Paul Rudin <paul@rudin.co.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = {extras = ["speedups"], version = "^3.7.4"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
